fix: swal p tag text align

--- a/emhttp/plugins/dynamix/styles/base-dynamix.css
+++ b/emhttp/plugins/dynamix/styles/base-dynamix.css
@@ -419,6 +419,7 @@ div.sb-message {
 .sweet-alert h2,
 .sweet-alert p {
     color: var(--dynamix-sweet-alert-text-color);
+    text-align: inherit;
 }
 table.tablesorter {
     margin: 0 0 15px 0;
